# shadowsocks-libev

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.CHN.md  README.md  README_pt_BR.md  configure  configure.ac
.github/workflows/: build.yml
Doc/: Makefile.in  shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
acl/: delegation.acl  gfwlist.acl  server_block_chn.acl
completions/bash/: ss-local  ss-manager  ss-redir  ss-server  ss-tunnel
completions/zsh/: _ss-local  _ss-manager  _ss-redir  _ss-server  _ss-tunnel
debian/: control  copyright  rules  shadowsocks-libev-local@.service  shadowsocks-libev-redir@.service  shadowsocks-libev-server@.service  shadowsocks-libev-tunnel@.service  shadowsocks-libev.postinst  shadowsocks-libev.postrm  shadowsocks-libev.service
doc/: shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-manager.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
docker/: Dockerfile  README.md
docker/alpine/: Dockerfile
libev/: ev.h
m4/: mbedtls.m4  pcre2.m4
man/: shadowsocks-libev.8  ss-local.1  ss-manager.1  ss-redir.1  ss-server.1  ss-tunnel.1
rpm/: genrpm.sh
rpm/SPECS/: shadowsocks-libev.spec  shadowsocks-libev.spec.in
scripts/: build_deb.sh  ss-qr.sh
scripts/multi-configuration scripts/: README.md
src/: CMakeLists.txt  Makefile.am  Makefile.in  acl.c  acl.h  aead.c  aead.h  base64.c  cache.c  cache.h  common.h  conditional.c  crypto.c  crypto.h  http.c  jconf.c  jconf.h  local.c  local.h  manager.c  manager.h  netutils.c  netutils.h  noencrypt.c  noencrypt.h  obfs.h  obfs_http.c  obfs_tls.c  obfs_tls.h  plugin.c  plugin.h  redir.c  redir.h  relay.c  relay.h  resolv.c  resolv.h  rule.c  rule.h  server.c  (+13 more)
